# Agent-Fabric

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
AI Workflow Backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  requirements.txt  run.py  wsgi.py
AI Workflow Backend/app/: __init__.py  config.py
AI Workflow Backend/app/api/: routes.py
AI Workflow Backend/app/services/: pipeline_manager.py
AI Workflow Backend/app/sockets/: handlers.py
AI Workflow Backend/app/templates/: index.html
AI Workflow Backend/app/vision/: captioning.py  detection.py  stream.py  tracking.py
backend_langgraph/: .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml
backend_langgraph/src/backend_langgraph/: __init__.py  main.py
backend_langgraph/src/backend_langgraph/agent/: graph.py  runner.py
backend_langgraph/src/backend_langgraph/api/: auth_routes.py  routes.py
backend_langgraph/src/backend_langgraph/auth/: dependencies.py  security.py  service.py
backend_langgraph/src/backend_langgraph/core/: config.py  middleware.py
backend_langgraph/src/backend_langgraph/db/: bootstrap.py  clients.py  indexes.py
backend_langgraph/src/backend_langgraph/schemas/: agent.py  auth.py  knowledge.py
backend_langgraph/src/backend_langgraph/services/: groq_service.py  mcp_tools_client.py
backend_langgraph/src/backend_langgraph/telemetry/: metrics.py
backend_langgraph/tests/: test_api.py  test_integration_mongo_redis.py
backend_mcp/: .dockerignore  .env.example  Dockerfile  README.md  mypy.ini  pyproject.toml
backend_mcp/src/backend_mcp/: __init__.py  main.py
backend_mcp/src/backend_mcp/api/: auth_routes.py  routes.py  tool_routes.py
backend_mcp/src/backend_mcp/auth/: dependencies.py  security.py  service.py
backend_mcp/src/backend_mcp/core/: config.py  logging.py  middleware.py
backend_mcp/src/backend_mcp/db/: bootstrap.py  clients.py  indexes.py
backend_mcp/src/backend_mcp/schemas/: auth.py  tools.py
backend_mcp/src/backend_mcp/services/: mcp_server.py  tooling_service.py
backend_mcp/src/backend_mcp/telemetry/: metrics.py
backend_mcp/tests/: test_health.py  test_integration_mongo_redis.py
ops/: deploy-check.ps1
